# MercadoScope

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: bootstrap.py  config.py  database.py  main.py  models.py  schemas.py  tenant.py
app/api/: jobs.py  pages.py
app/services/: analysis.py  exporter.py  jobs.py  report.py  scraper.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: API.md  CHANGELOG.md  COMMERCIAL.md  COMPETITORS.md  ONBOARDING.md  PORTFOLIO.md  SQUADS.md  STRATEGIC.md  TECHNICAL.md
tests/: test_analysis.py  test_api.py  test_parsers.py
