[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "tests*"]

[project]
name = "mercadoscope"
version = "1.0.0"
description = "Portfolio-ready Mercado Livre price intelligence scraper with CSV and PDF reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.4,<3",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "playwright>=1.48,<2",
  "pandas>=2.2,<3",
  "reportlab>=4.2,<5",
  "python-slugify>=8.0,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
